Implement flightcontrol steps 11 (module imports), 12 (flexible constructor bodies), 13 (HTTP/3 client)